update i havent pushed

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -25,10 +25,18 @@
 	<h4>Use this Game to ENJOY yourself</h4>
 	all rights reserved Ezekiel Saturday
 </p>
-<div>Score:<span id="score"></span></div>
-<canvas id="tetris" width="240" height="400"></canvas>
+<div>
+	Score:<span id="score"></span>
+</div>
+<canvas id="tetris" width="240" height="400">
+</canvas>
 
 
+
+	<script type="text/javascript" src="./assets/plugins/jquery.js"></script>
 	<script type="text/javascript" src="./assets/js/main.js"></script>
+	<script type="text/javascript">
+		
+	</script>
 </body>
 </html>
