ES6 MAD OVER ES5...#LOL

--- a/Es5 vs Es6.html
+++ b/Es5 vs Es6.html
@@ -5,23 +5,25 @@
 </head>
 <body>
 
-<p>
-	See How Changing one js Keyword totally redefines the outcome of a code<br/>
+	<h1>Please READ through</h1>
 
-	Ensure you comment out one function to run the other<br/>
+	<p>
+		See How Changing one js Keyword totally redefines the outcome of a code<br/>
 
-	press Ctrl + Shift + I to view..</br>
+		Ensure you comment out one function to run the other<br/>
 
-	<br>
-	<br>
-	Watch Fork, clone and keep updating it with More...
-	<br>
-	Would be delighted to see what ES6 can do over ES5
+		press Ctrl + Shift + I to view..</br>
 
-	<h3>#ATTAAB</h3>
-	<h4>NODEjs</h4>
+		<br>
+		<br>
+		Watch Fork, clone and keep updating it with More...
+		<br>
+		Would be delighted to see what ES6 can do over ES5
 
-</p>
+		<h3>#ATTAAB</h3>
+		<h4>NODEjs</h4>
+
+	</p>
 
 
 
