--- a/Es5 vs Es6.html
+++ b/Es5 vs Es6.html
@@ -41,7 +41,7 @@
 		}
 
 /*=================================*/
-	vvar funcs = [];
+	var funcs = [];
 		for (let i = 0; i < 3; i++) {     
 		  funcs[i] = function (){
 		  	console.log("My value: " + i);
